--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,11 @@
+@import "partial/variable";
 @import "partial/home";
 @import "partial/about";
 @import "partial/error";
 @import "partial/rental";
 @import "partial/footer";
-@import "partial/header";
+@import "partial/banner";
+@import "partial/card";
 
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
@@ -13,5 +15,6 @@
   font-family: "Montserrat", sans-serif;
 }
 body {
-  margin: 0;
+  margin: 0 auto; /* Centrer le contenu horizontalement */
+  max-width: 1400px; /* Définir une largeur maximale pour le contenu */
 }
