--- a/src/style/partial/footer.scss
+++ b/src/style/partial/footer.scss
@@ -1,22 +1,25 @@
 .footer {
   background-color: black;
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   padding: 45px 0px 15px 0px;
-  width: 100%;
+  z-index: 100; // Assurez-vous que le footer est au-dessus de tous les autres éléments si nécessaire
+}
 
-  .copyright {
-    color: white;
-    display: flex;
-    justify-content: center;
-    margin-top: 55px;
-    font-size: 24px;
-  }
-  .logo2 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 122px;
-    height: 40px;
-  }
+.copyright {
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-top: 55px;
+  font-size: 24px;
+}
+
+.logo2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 122px;
+  height: 40px;
 }
